--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.rabriel.gwt</groupId>
     <artifactId>given-when-then</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
 
     <dependencies>
         <dependency>
